--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<meta name="google-adsense-account" content="ca-pub-8628829898524808">
-<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+     <meta name="google-adsense-account" content="ca-pub-8628829898524808">
+     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
     <title>jeancy24Sur.com</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8628829898524808"
      crossorigin="anonymous"></script>
+
+
+
+     <meta name="description" content="We create affordable websites and mobile applications tailored to meet the needs of individuals and businesses. Our goal is to provide high-quality, cost-effective solutions that help you establish an online presence and reach your target audience.">
+     <meta name="keywords" content="Get Your Web  , software, developer,job, react, nodejs, python, frontend, backend, web, mobile">
+     <meta name="author" content="@jeancy24Sur">
+     <meta name="robots" content="index, follow">
+     <meta property="og:title" content="Software Developer Job Opportunity">
+     <meta property="og:description" content="Join our team and work with cutting-edge technologies like Node.js, React, and Python. Apply now!">
+     <meta property="og:image" content="/jeancy24Sur.com.png">
+     <meta property="fb:app_id" content="jeancy24Sur.com">
+     <meta property="og:url" content="https://jeancy24sur.com/Application">
+
+
   </head>
   <body>
     <div id="root"></div>
