--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <meta name="keywords" content="Get Your Web  , software, developer,job, react, nodejs, python, frontend, backend, web, mobile">
      <meta name="author" content="@jeancy24Sur">
      <meta name="robots" content="index, follow">
-     <meta property="og:title" content="Software Developer Job Opportunity">
+     <meta property="og:title" content="We create affordable websites and mobile applications tailored to meet the needs of individuals and businesses ,Software Developer Job Opportunity">
      <meta property="og:description" content="Join our team and work with cutting-edge technologies like Node.js, React, and Python. Apply now!">
      <meta property="og:image" content="/jeancy24Sur.com.png">
      <meta property="fb:app_id" content="jeancy24Sur.com">
