--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8628829898524808"
+     crossorigin="anonymous"></script>
+     google.com, pub-8628829898524808, DIRECT, f08c47fec0942fa0
   </head>
   <body>
     <div id="root"></div>
