--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8628829898524808"
      crossorigin="anonymous"></script>
-     google.com, pub-8628829898524808, DIRECT, f08c47fec0942fa0
+     <meta name="google-adsense-account" content="ca-pub-8628829898524808">
   </head>
   <body>
     <div id="root"></div>
